--- a/estilo.css
+++ b/estilo.css
@@ -180,3 +180,9 @@ a:hover{
 #o a{
      text-decoration: none;
 }
+#depp p{
+    background-color: #F4F3EB;
+}
+#his p{
+    background-color: #F4F3EB;
+}
