--- a/estilo.css
+++ b/estilo.css
@@ -145,8 +145,8 @@ a:hover{
 }
 #cont{
     display: flex;
-  justify-content: space-between;
-  align-items: center;
+    justify-content: space-between;
+    align-items: center;
 }
 #cont h5{
      font-family:"Julius Sans One", sans-serif;
@@ -190,5 +190,11 @@ a:hover{
     background-color: #F4F3EB;
 }
 @media screen and (max-width:769px){
-
+ #cont{
+    flex-direction: column;
+    align-items: start;
+ }
+}
+#port div{
+    grid-template-columns:1fr 1fr;
 }
