--- a/estilo.css
+++ b/estilo.css
@@ -84,7 +84,7 @@ a:hover{
     text-align: center;
     padding:50px;
 }
-#port.lim{
+#port.container{
     max-width: 1000px;
      margin: 0 auto;
 }
@@ -189,6 +189,12 @@ a:hover{
 #his p{
     background-color: #F4F3EB;
 }
+#botaomenu{
+    display:none;
+}
+#aberturamenu{
+    display:none;
+}
 @media screen and (max-width:769px){
  #cont{
     flex-direction: column;
@@ -196,5 +202,25 @@ a:hover{
  }
  #port div{
     grid-template-columns:1fr 1fr;
+    margin-left:140px;
+}
+#port img{
+    height:200px;
+    align-items:center;
+}
+.containerdaniel{
+    flex-direction:column;
+}
+#dep2{
+    grid-template-columns:1fr;
+}
+}
+@media screen and (max-width:426px){
+#port div{
+    grid-template-columns: 1fr;
+    margin-left:100px;
+}
+#port img{
+    height:250px;
 }
 }
