--- a/estilo.css
+++ b/estilo.css
@@ -191,11 +191,17 @@ a:hover{
 #his p{
     background-color: #F4F3EB;
 }
-#botaomenu{
-    display:none;
+#forms a{
+    background-color: #FAD643;
+    border-radius: 80px;
+    padding: 10px 20px;
+    margin-bottom: 50px;
+    text-decoration: none;
+    margin-top:20px;
 }
-#aberturamenu{
-    display:none;
+#forms p{
+    display:flex;
+    justify-content: center;
 }
 @media screen and (max-width:769px){
  #cont{
@@ -223,12 +229,19 @@ a:hover{
 #dep2{
     grid-template-columns:1fr;
 }
+#por2 div{
+    grid-template-columns: repeat(2,1fr);
+    justify-items:center;
+}
 }
 @media screen and (max-width:426px){
 #port div{
-    grid-template-columns: 1fr;
+    grid-template-columns:1fr;
 }
 #port img{
     height:250px;
+}
+#por2 div{
+    grid-template-columns:1fr;
 }
 }
