--- a/estilo.css
+++ b/estilo.css
@@ -229,6 +229,11 @@ a:hover{
 #dep2{
     grid-template-columns:1fr;
 }
+#dep2 article{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
 #por2 div{
     grid-template-columns: repeat(2,1fr);
     justify-items:center;
