--- a/estilo.css
+++ b/estilo.css
@@ -286,50 +286,105 @@ fieldset label {
     color: white; 
     border-color: #926C15;
 }
-@media screen and (max-width:769px){
- #cont{
-    flex-direction: column;
-    align-items: start;
- }
- #port div{
-    grid-template-columns:1fr 1fr;
-    justify-items: center;
+@media screen and (max-width: 769px) {
+    #cont {
+        flex-direction: column;
+        align-items: start;
+    }
+    #port div {
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+    #port img {
+        height: 200px;
+    }
+    .containerdaniel {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .fotonome {
+        width: 100%;
+    }
+    #tex {
+        width: 100%;
+    }
+    #dep2 {
+        grid-template-columns: 1fr;
+    }
+    #dep2 article {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #por2 div {
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+    }
+
+    /* Regras do Formulário */
+    form {
+        max-width: 90%; 
+        margin: 20px auto; 
+        padding: 15px;
+        border-radius: 0;
+    }
+    
+    label, legend {
+        font-size: 15px;
+    }
+
+    .formulario {
+        padding: 8px;
+        margin-bottom: 15px;
+    }
+    
+    fieldset {
+        padding: 10px;
+        margin-bottom: 20px;
+    }
+
+    fieldset label {
+        display: block; 
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
+    
+    .btamarelo {
+        padding: 10px;
+        font-size: 16px;
+    }
 }
-#port img{
-    height:200px;
-}
-.containerdaniel{
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-}
-.fotonome{
-    width:100%;
-}
-#tex{
-    width:100%;
-}
-#dep2{
-    grid-template-columns:1fr;
-}
-#dep2 article{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-}
-#por2 div{
-    grid-template-columns: repeat(2,1fr);
-    justify-items:center;
-}
-}
-@media screen and (max-width:426px){
-#port div{
-    grid-template-columns:1fr;
-}
-#port img{
-    height:250px;
-}
-#por2 div{
-    grid-template-columns:1fr;
-}
+
+@media screen and (max-width: 426px) {
+    #port div {
+        grid-template-columns: 1fr;
+    }
+    #port img {
+        height: 250px;
+    }
+    #por2 div {
+        grid-template-columns: 1fr;
+    }
+
+    /* Regras do Formulário */
+    form {
+        max-width: 95%; 
+        padding: 10px;
+        margin: 10px auto;
+    }
+    
+    textarea.formulario {
+        height: 120px;
+    }
+
+    label, legend {
+        font-size: 14px;
+    }
+    
+    .btamarelo {
+        padding: 12px;
+        font-size: 15px;
+        font-weight: 700;
+    }
 }
