--- a/estilo.css
+++ b/estilo.css
@@ -206,6 +206,8 @@ a:hover{
 form {
     max-width: 400px;
     margin: 0 auto;
+    margin-top:50px;
+    margin-bottom:50px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px; 
@@ -360,7 +362,7 @@ fieldset label {
     form {
         max-width: 95%; 
         padding: 10px;
-        margin: 10px auto;
+        margin: 20px auto;
     }
     textarea.formulario {
         height: 120px;
